cosmic-epoch/cosmic-sory-ia/sory-ia/sory-rs/tui/src/snapshots/sory_tui__external_agent_config_migration__tests__external_agent_config_migration_prompt.snap
---
source: tui/src/external_agent_config_migration.rs
expression: rendered
---
  > External agent config detected
  We found settings from another agent that you can add to this project.
  Select what to import
  Home
    [x] Migrate /Users/alex/.claude/settings.json into /Users/alex/.sory/con…

  Project: /workspace/project
    [x] Migrate enabled plugins from .claude/settings.json (4 marketplaces, 6…
        • acme-tools: deployer, formatter, +1 more
        • team-marketplace: asana
        • debug: sample
        • +1 more marketplaces
    [x] Migrate CLAUDE.md to AGENTS.md

  Selected 3 of 3 item(s).
    1. Proceed with selected                                                  
    2. Skip for now                                                           
    3. Don't ask again                                                        
  Use ↑/↓ to move, space to toggle, 1/2/3 to choose, a/n for all/none
